--- a/blog_website/blog/templates/master.html
+++ b/blog_website/blog/templates/master.html
@@ -36,4 +36,8 @@
 {% block content %}
 {% endblock %}
 </body>
+
+<footer>
+    © {% now "Y" %} Blog Website. All rights reserved.
+</footer>
 </html>
